[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/phone_controls.gd" type="Script" id=1]
[ext_resource path="res://sprites/UI/move_left.png" type="Texture" id=2]
[ext_resource path="res://sprites/UI/move_right.png" type="Texture" id=3]
[ext_resource path="res://sprites/UI/pause.png" type="Texture" id=4]

[node name="phone_controls" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="left" type="Button" parent="."]
visible = false
margin_left = 41.8006
margin_top = 570.831
margin_right = 173.801
margin_bottom = 696.831
rect_scale = Vector2( 0.6, 0.6 )
icon = ExtResource( 2 )
flat = true

[node name="right" type="Button" parent="."]
visible = false
margin_left = 134.801
margin_top = 570.831
margin_right = 266.801
margin_bottom = 696.831
rect_scale = Vector2( 0.6, 0.6 )
icon = ExtResource( 3 )
flat = true

[node name="pause" type="Button" parent="."]
margin_left = 1186.99
margin_top = 634.156
margin_right = 1318.99
margin_bottom = 760.156
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 4 )
flat = true
[connection signal="button_down" from="left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="right" to="." method="_on_right_button_up"]
[connection signal="mouse_entered" from="pause" to="." method="_on_pause_mouse_entered"]
[connection signal="mouse_exited" from="pause" to="." method="_on_pause_mouse_exited"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
